# natural_sort-pgxn

./: .gitignore  Cargo.toml  META.json  Makefile  NOTES.md  README.md  natural_sort.control
doc/: natural_sort.md
sql/: natural_sort.sql  uninstall_natural_sort.sql
src/: natural_sort.rs
test/expected/: base.out
test/sql/: base.sql
