[package]

name = "natural_sort"
version = "0.0.1"
authors = ["stereobooster <stereobooster@gmail.com>"]

[lib]
name = "natural_sort"
crate-type = ["dylib"]

[dependencies.postgres_extension]
path = "https://github.com/thehydroimpulse/postgres-extension.rs"

[dependencies.postgres_extension_macros]
path = "https://github.com/thehydroimpulse/postgres-extension.rs"
