[package]

name = "natural_sort"
version = "0.0.1"
authors = ["stereobooster <stereobooster@gmail.com>"]

[lib]
name = "natural_sort"
crate-type = ["dylib"]

[dependencies.postgres_extension]
git = "https://github.com/thehydroimpulse/postgres-extension.rs"

[dependencies.postgres_extension_macros]
git = "https://github.com/thehydroimpulse/postgres-extension.rs"

[dependencies.natord]
git = "https://github.com/lifthrasiir/rust-natord.git"
