[package]

name = "natural_sort"
version = "0.0.1"
authors = ["stereobooster <stereobooster@gmail.com>"]

[lib]
name = "natural_sort"
crate-type = ["dylib"]

[dependencies.postgres_extension]
git = "https://github.com/jeff-davis/postgres-extension.rs.git"
branch = "fixes"

[dependencies.postgres_extension_macros]
git = "https://github.com/jeff-davis/postgres-extension.rs.git"
branch = "fixes"

[dependencies.natord]
git = "https://github.com/lifthrasiir/rust-natord.git"
